--- a/common/common/utils/csrc/CMakeLists.txt
+++ b/common/common/utils/csrc/CMakeLists.txt
@@ -2,4 +2,4 @@ set(COMMON_UTILITY_SOURCE_FILES file_system.cpp)
 
 set(COMMON_UTILITY_HEADER_FILES file_system.h)
 
-add_library(yh_common_utility STATIC ${COMMON_UTILITY_HEADER_FILES} ${COMMON_UTILITY_SOURCE_FILES})
+add_library(common_utility STATIC ${COMMON_UTILITY_HEADER_FILES} ${COMMON_UTILITY_SOURCE_FILES})
