--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,5 @@
         "*.inc": "cpp",
         "*.so": "cpp"
     },
-    "python.pythonPath": "/home/huanyuan/anaconda3/bin/python",
+    "python.pythonPath": "C:\\Users\\yh\\anaconda3\\python.exe",
 }
