--- a/Speech/ASR/deploy/CMakeLists.txt
+++ b/Speech/ASR/deploy/CMakeLists.txt
@@ -1,11 +1,13 @@
 # set core files
-file(GLOB ASR_COMMON_FILES common/*.h common/*.hpp common/*.cpp )
+file(GLOB ASR_COMMON_FILES common/*.h common/*.hpp common/*.cpp)
+file(GLOB ASR_PYWRAPPERS_FILES pywrappers/*.h pywrappers/*.hpp pywrappers/*.cpp)
 
 source_group(asr_common FILES ${ASR_COMMON_FILES})
+source_group(asr_pywrappers FILES ${ASR_PYWRAPPERS_FILES})
 
 # asr dll library
-add_library(ai_speech_asr SHARED ${ASR_COMMON_FILES})
-target_link_libraries(ai_speech_asr ${OpenCV_LIBS} )
+add_library(ai_speech_asr SHARED ${ASR_COMMON_FILES} ${ASR_PYWRAPPERS_FILES})
+target_link_libraries(ai_speech_asr ${OpenCV_LIBS})
 target_link_libraries(ai_speech_asr glog::glog)
 
 # add test
