--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {            
+            "name": "(gdb) fft_alg_main",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Speech/FFT/lib/Debug/alg_main",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/Speech/FFT/lib/Debug/",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
         {
             "name": "Python: 当前文件",
             "type": "python",
