--- a/Speech/KWS/requirements.txt
+++ b/Speech/KWS/requirements.txt
@@ -1,13 +1,16 @@
-easydict==1.9
 ffmpeg
-librosa==0.8.0
 lmdb
-numba-0.54.0
 opencv-python
 plotly
 soundfile
 thop
 torchstat
 tensorwatch
+webrtcvad
+
+easydict==1.9
+librosa==0.8.0
+numba==0.54.0
+
 git+https://github.com/daemon/pytorch-pcen
 git+https://github.com/amsehili/auditok
