--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,25 @@
             "program": "${file}",
             "console": "integratedTerminal",
         },
+        {
+            "name": "(gdb) test_debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Speech/ASR/lib/Debug/test_debug",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/Speech/ASR/lib/Debug/",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
         {            
             "name": "(gdb) fft_alg_main",
             "type": "cppdbg",
