--- a/Speech/ASR/deploy/CMakeLists.txt
+++ b/Speech/ASR/deploy/CMakeLists.txt
@@ -15,6 +15,11 @@ target_link_libraries(test_feature ai_speech_asr ${OpenCV_LIBS})
 target_link_libraries(test_feature debug ${COMMON_UTILITY_LIBRARY_DEBUG} optimized ${COMMON_UTILITY_LIBRARY_RELEASE})
 
 # add test
+add_executable(test_debug test_debug.cpp)
+target_link_libraries(test_debug ai_speech_asr ${OpenCV_LIBS})
+target_link_libraries(test_debug debug ${COMMON_UTILITY_LIBRARY_DEBUG} optimized ${COMMON_UTILITY_LIBRARY_RELEASE})
+
+# add test
 add_executable(alg_main alg_main.cpp)
 target_link_libraries(alg_main ai_speech_asr ${OpenCV_LIBS})
 target_link_libraries(alg_main debug ${COMMON_UTILITY_LIBRARY_DEBUG} optimized ${COMMON_UTILITY_LIBRARY_RELEASE})
