--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = https://github.com/ProLing1994/mmdetection.git
 [submodule "Image/segmentation2d/rm_ai_mmseg"]
 	path = Image/segmentation2d/rm_ai_mmseg
-	url = git@gitlab.visionlab.com:mawenguang/rm_ai_mmseg.git
+	url = https://gitlab.com/YuanHuan_Pro/rm_ai_mmseg.git
